2015-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Update some help texts.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2015-01-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cpascal.h: Remove intcast.

2015-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicopy.ch: Drop intcast().
	* dvitype.ch: Drop intcast().
	* gftodvi.ch: Drop intcast().
	* mf.ch: Drop intcast().
	* pltotf.ch: Drop intcast().
	* tangle.ch: Drop intcast().
	* tex.ch: Drop intcast().
	* tftopl.ch: Drop intcast().
	* vftovp.ch: Drop intcast().
	* vptovf.ch: Drop intcast().

2015-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mf.ch: Revert the previous change (^Z is again invalid).

	* dvitype.ch: Cosmetic changes.

2015-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mf.ch: Ignore ^Z in input files (as tab and form_feed).

2015-01-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tftopl.ch, vftovp.ch: Use ^byte and x*alloc_array().
	* cpascal.h: Remove casttobytepointer and pointertobyte.

2015-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tftopl.ch: Non-zero return code in case of problems.
	* tftopl.test, vftovp.test: Add more tests.
	* tests/badtfm.tfm, tests/badvf.{tfm,vf}: New test input files.
	* am/web.am: Adjust for additional test input and output files.

2015-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Send diagnostic messages to stderr.
	Non-zero return code in case of problems.
	* pltotf.test, vptovf.test: Add more tests.
	* tests/badpl.pl, tests/badvpl.vpl: New test input files.
	* am/web.am: Adjust for additional test input and output files.

2014-12-11  Karl Berry  <karl@tug.org>

	* triptest,
	* mftraptest: complain early if trip.fmt/trap.base are not created.
	Original report from vvv, tlbuild 14 Jun 2011 10:25:47.

2014-11-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cpascal.h (makebinaryfile): Avoid gcc -Wunused-value warning.
